fix: address quarkus sonarcloud findings